--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "member-install": "cd member && npm install",
     "start": "node server.js",
     "server": "nodemon server.js",
-    "client": "cd member && npm start",
+    "client": "cd client && npm start",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Atena Razmpoush",
   "license": "ISC",
   "dependencies": {
     "concurrently": "^5.3.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
